# STCALIR-Semi-Synthetic-Test-Collection-for-Algerian-Legal-IR

./: .gitignore  Hit@k_MRR@k.py  Hit@k_vs_EffortReduction.py  KENDALL_TAU+R@k_MRR@k.py  README.md  STCALIR human annotation.py  batch_run.ipynb  gemma-4-anotation-ir.ipynb  main.ipynb  mr-tydiarabic-pool-rrf-pseudo-judgment.ipynb  mrtydi_annotation_jugement.py  pyproject.toml  stcalir-corpus-construction-hybrid-chunking.ipynb  stcalir-pseudo-judgment-syntitic-test-collection.ipynb
archive_v1/: stcalir-pool-constraction.ipynb
configs/: algerian_legal.yaml  mmarco_arabic.yaml  mrtydi_arabic.yaml  mrtydi_english.yaml  msmarco_english.yaml
stcalir/: __init__.py  config.py  registry.py  utils.py
stcalir/annotation/: llm.py  topic_gen.py
stcalir/corpus/: chunker.py  loader.py
stcalir/evaluation/: correlation.py  metrics.py
stcalir/indexing/: bm25.py  encoder.py  faiss_index.py
stcalir/reranking/: cross_encoder.py  rrf_rerank.py
stcalir/retrieval/: bm25_retriever.py  dense_retriever.py  rrf.py
stcalir/topics/: loader.py  selector.py
stcalir/ui/: relevance_ui.py  topic_ui.py
stcir/: __init__.py  config.py  registry.py
stcir/annotation/: llm.py  topic_gen.py
stcir/corpus/: chunker.py  loader.py
stcir/evaluation/: correlation.py  metrics.py
stcir/indexing/: bm25.py  encoder.py  faiss_index.py
stcir/pipeline/: runner.py
stcir/publishing/: hub.py
stcir/reranking/: cross_encoder.py  rrf_rerank.py
stcir/retrieval/: bm25_retriever.py  dense_retriever.py  rrf.py
stcir/topics/: loader.py  selector.py
stcir/ui/: relevance_ui.py  topic_ui.py
