[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stcalir"
version = "0.1.0"
description = "Semi-Synthetic Test Collection framework for Information Retrieval"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
    "datasets>=2.19",
    "ir-measures>=0.3",
    "scipy>=1.13",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "flask>=3.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "jsonlines>=4.0",
    "accelerate>=0.30",
    "torch>=2.2",
    "nltk>=3.8",
    "ipywidgets>=8.0",
    "ir_datasets>=0.5",
]

[project.optional-dependencies]
gpu = ["faiss-gpu>=1.8"]
dev = ["pytest>=8.0", "black>=24.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["stcalir*"]
